--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: bar
-Title: Simulation And Least Squares Estimation Of The Buffered Autoregressive Model
+Title: Simulation And Least Squares Estimation of the Buffered Autoregressive Model
 Version: 0.0.9
 Authors@R: 
-    person("Daan", "de Jong", , "d.dejong@uu.nl", role = c("aut", "cre"),
+    person("Daan", "de Jong", email = "d.dejong@uu.nl", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: The buffered autoregressive (BAR) model describes a time series that follows 
+	one of two possible AR processes according to a hysteretic switching mechanism.
+	With 'bar', you can simulate data from this model and estimate parameter values
+	based on data. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -12,3 +15,5 @@ RoxygenNote: 7.2.0
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/daandejongen/bar
+BugReports: https://github.com/daandejongen/bar/issues
