--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+Imports: stats, utils
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
