--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Simulation And Least Squares Estimation of the Buffered Autoregressive Mo
 Version: 0.0.9
 Authors@R: 
     person("Daan", "de Jong", email = "d.dejong@uu.nl", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           comment = c(ORCID = "0000-0001-6034-0136"))
 Description: The buffered autoregressive (BAR) model describes a time series that follows 
 	one of two possible AR processes according to a hysteretic switching mechanism.
 	With 'bar', you can simulate data from this model and estimate parameter values
