--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,14 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
-Imports: stats, utils
+Imports: 
+    Rcpp,
+    stats,
+    utils
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://github.com/daandejongen/bar
 BugReports: https://github.com/daandejongen/bar/issues
+LinkingTo: 
+    Rcpp
