--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,6 @@ importFrom(stats,quantile)
 importFrom(stats,residuals)
 importFrom(stats,rnorm)
 importFrom(utils,combn)
+importFrom(Rcpp, sourceCpp)
+useDynLib(bar)
+
