--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,6 @@ importFrom(stats,quantile)
 importFrom(stats,residuals)
 importFrom(stats,rnorm)
 importFrom(utils,combn)
-useDynLib(mypackage)
+useDynLib(bar)
 importFrom(Rcpp, sourceCpp)
 
