--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
-Package: bar
-Title: Simulation And Least Squares Estimation of the Buffered Autoregressive Model
+Package: hystar
+Title: Simulation And Least Squares Estimation of the hysteretic TAR Model
 Version: 0.0.9
 Authors@R: 
     person("Daan", "de Jong", email = "d.dejong@uu.nl", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-6034-0136"))
-Description: The buffered autoregressive (BAR) model describes a time series that follows 
-	one of two possible AR processes according to a hysteretic switching mechanism.
-	With 'bar', you can simulate data from this model and estimate parameter values
-	based on data. 
+Description: The hysteretic threshold autoregressive (hysTAR) model describes a
+    time series that follows one of two possible AR processes according to a
+    hysteretic switching mechanism. With 'hystar', you can simulate data from
+    this model and estimate parameter values based on empirical or simulated data.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
