--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ S3method(plot,hystar_data)
 S3method(print,hystar)
 S3method(residuals,hystar)
 S3method(summary,hystar)
-export(get_sw_pnts)
 export(hystar_fit)
 export(hystar_sim)
 importFrom(stats,coef)
@@ -20,3 +19,5 @@ importFrom(stats,quantile)
 importFrom(stats,residuals)
 importFrom(stats,rnorm)
 importFrom(utils,combn)
+useDynLib(hystar)
+importFrom(Rcpp, sourceCpp)
