--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ S3method(residuals,hystar)
 S3method(summary,hystar)
 export(hystar_fit)
 export(hystar_sim)
+export(z_sim)
+importFrom(Rcpp,sourceCpp)
 importFrom(stats,coef)
 importFrom(stats,fitted)
 importFrom(stats,nobs)
@@ -19,5 +21,4 @@ importFrom(stats,quantile)
 importFrom(stats,residuals)
 importFrom(stats,rnorm)
 importFrom(utils,combn)
-useDynLib(hystar)
-importFrom(Rcpp, sourceCpp)
+useDynLib(hystar, .registration = TRUE)
