--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,22 @@ S3method(confint,hystar_fit)
 S3method(fitted,hystar_fit)
 S3method(nobs,hystar_fit)
 S3method(plot,hystar_fit)
+S3method(plot,hystar_sim)
 S3method(print,hystar_fit)
+S3method(print,hystar_sim)
 S3method(residuals,hystar_fit)
 S3method(summary,hystar_fit)
-S3method(plot,hystar_sim)
-S3method(print,hystar_sim)
 S3method(summary,hystar_sim)
 export(hystar_fit)
 export(hystar_sim)
 export(z_sim)
 importFrom(Rcpp,sourceCpp)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,legend)
+importFrom(graphics,par)
+importFrom(graphics,rect)
+importFrom(graphics,segments)
 importFrom(stats,coef)
 importFrom(stats,fitted)
 importFrom(stats,nobs)
