--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,23 @@
 Package: hystar
-Title: Simulation And Least Squares Estimation of the hysteretic TAR Model
+Title: Simulation and Estimation of the Hysteretic TAR Model
 Version: 0.0.9
-Authors@R: 
-    person("Daan", "de Jong", role = c("aut", "cre"), email = "d.dejong@uu.nl", 
-           comment = c(ORCID = "0000-0001-6034-0136"))
+Authors@R: c(
+    person(
+        "Daan", "de Jong", 
+        role = c("aut", "cre"), 
+        email = "d.dejong@uu.nl", 
+        comment = c(ORCID = "0000-0001-6034-0136")
+        ),
+    person(
+        "European Research Council", 
+        role = "fnd"
+        )
+    )
 Maintainer: Daan de Jong <d.dejong@uu.nl>
-Description: The hysteretic threshold autoregressive (hysTAR) model describes a
-    time series that follows one of two possible AR processes according to a
-    hysteretic switching mechanism. With 'hystar', you can simulate data from
-    this model and estimate parameter values based on empirical or simulated data.
+Description: Simulates data from and estimates parameters of the hysteretic
+    threshold autoregressive (HysTAR) model. Estimation is implemented using 
+    the conditional least squares method. See Li, Guan, Li and Yu (2015) 
+    <doi:10.1093/biomet/asv017> for details about the model.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -21,7 +30,7 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-URL: https://github.com/daandejongen/bar/
-BugReports: https://github.com/daandejongen/bar/issues/
+URL: https://github.com/daandejongen/hystar/
+BugReports: https://github.com/daandejongen/hystar/issues/
 LinkingTo: 
     Rcpp
