added some useful links

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://daandejongen.github.io/hystar/
+url: https://daandejongen.github.io/hystar/, https://dplyr.tidyverse.org
 template:
   bootstrap: 5
 
