--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,9 @@ Date: 2023-07-03
 Authors@R: c(
     person("Daan", "de Jong", 
            email = "daandejong94@gmail.com", 
-           role = c("aut", "cre", "cph"),
+           role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-6034-0136")),
+    person("Utrecht University", role = "cph"),
     person("European Research Council", role = "fnd")
   )
 Maintainer: Daan de Jong <daandejong94@gmail.com>
