--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(residuals,hystar_fit)
 S3method(summary,hystar_fit)
 S3method(summary,hystar_sim)
 export(hystar_fit)
+export(hystar_info)
 export(hystar_sim)
 export(z_sim)
 importFrom(Rcpp,sourceCpp)
@@ -28,5 +29,6 @@ importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,residuals)
 importFrom(stats,rnorm)
+importFrom(utils,browseURL)
 importFrom(utils,combn)
 useDynLib(hystar, .registration = TRUE)
